clean up repitition in tests